--- a/app/translate/translate.module.css
+++ b/app/translate/translate.module.css
@@ -12,3 +12,9 @@
 .inputfile::file-selector-button:hover {
     background: #2a7d79;
 }
+.dropdown{
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid gray;
+}
